--- a/frontend/src/app/components/pages/graphs/admin/admin-global-avg-score-over-time/admin-avg-score-over-time.component.html
+++ b/frontend/src/app/components/pages/graphs/admin/admin-global-avg-score-over-time/admin-avg-score-over-time.component.html
@@ -1,98 +1,98 @@
-<div class="container-fluid">
-  <div class="row">
-    <!-- Sidebar -->
-    <div class="sidebar-container d-flex flex-column">
-      <admin-navbar></admin-navbar>
-    </div>
+<div class="container-fluid d-flex flex-md-row flex-column">
+  <!-- Sidebar -->
+  <div class="sidebar-container d-flex justify-content-left text-center">
+    <admin-navbar></admin-navbar>
+  </div>
 
-    <div class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <!-- Main Content -->
+  <div class="main-content-container flex-grow-1">
+    <main role="main" class="px-4">
+      <!-- Title -->
+      <div class="title-container">
+        <h1 class="title">Global Average Score Across All Case Studies</h1>
+        <p>The "Global Average Score" graph combines performance trends with test counts over time, revealing insights into effectiveness and engagement across case studies.</p>
 
-      <!-- Main Content -->
-      <main role="main" >
-        <h1>Global Average Score Across All Case Studies</h1>
-        <div class="chart-container">
-          <canvas id="MyChart">{{ chart }}</canvas>
-        </div>
+      </div>
 
-        <div class="btn-group mt-3" role="group">
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(1)"
-          >
-            Last 1 Day
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(3)"
-          >
-            Last 3 Days
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(7)"
-          >
-            Last 7 Days
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(30)"
-          >
-            Last 1 Month
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(180)"
-          >
-            Last 6 Months
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="dateRangeChanged(365)"
-          >
-            Last 1 Year
-          </button>
-        </div>
+      <!-- Chart -->
+      <div class="chart-container mt-3">
+        <canvas id="MyChart">{{ chart }}</canvas>
+      </div>
 
-        <!--Table of results below-->
-        <table class="table table-striped mt-3">
-          <thead>
+      <!-- Date Range Filter -->
+      <div class="mt-3 d-flex justify-content-start flex-wrap">
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(1)">
+          Last 1 Day
+        </button>
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(3)">
+          Last 3 Days
+        </button>
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(7)">
+          Last 7 Days
+        </button>
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(30)">
+          Last 1 Month
+        </button>
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(180)">
+          Last 6 Months
+        </button>
+        <button type="button" class="date-range-button" (click)="dateRangeChanged(365)">
+          Last 1 Year
+        </button>
+      </div>
+
+      <!-- Table of results below -->
+      <table class="table table-striped mt-3">
+        <thead>
+          <tr>
             <tr>
-              <th scope="col">Date</th>
-              <th scope="col">Average Percentage (%)</th>
-              <th scope="col">Avg Eye Test Percentage (%)</th>
-              <th scope="col">Avg Investigations Percentage(%)</th>
-              <th scope="col">Number of Tests</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let label of labels; index as i">
-              <th scope="row">{{ label }}</th>
-              <td>{{ overallAveragePercentages[i] | number : "1.2-2" }}</td>
-              <td>
-                {{
-                  averageEyeTests[i]
-                    ? (averageEyeTests[i] / testsCount[i]) * 100
-                    : (0 | number : "1.2-2")
-                }}
-              </td>
-              <td>
-                {{
-                  averageInvestigationsTests[i]
-                    ? (averageInvestigationsTests[i] / testsCount[i]) * 100
-                    : (0 | number : "1.2-2")
-                }}
-              </td>
-              <td>{{ testsCount[i] }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </main>
+              <th (click)="onHeaderClick('date')"scope="col" class="sortable-header">Date</th>
+              <th (click)="onHeaderClick('average')"scope="col" class="sortable-header">Average Total Percentage</th>
+              <th (click)="onHeaderClick('avgEyeTest')" scope="col" class="sortable-header">Avg Eye Test Percentage (%)</th>
+              <th (click)="onHeaderClick('avgInvestigations')" scope="col" class="sortable-header">Avg Investigations Percentage(%)</th>
+              <th (click)="onHeaderClick('avgDiagnosis')" scope="col" class="sortable-header">Avg Diagnosis Percentage(%)</th>
+              <th (click)="onHeaderClick('testCount')" scope="col" class="sortable-header">Number of Tests</th>
+          </tr>
+ 
+        </thead>
+        <tbody>
+          <tr *ngFor="let label of labels; index as i">
+            <th scope="row">{{ label }}</th>
+            <td>{{ overallAveragePercentages[i] | number : "1.0-0" }}</td>
+            <td>
+              {{
+                averageEyeTests[i]
+                  ? (averageEyeTests[i])
+                  : (0 | number : "1.0-0")
+              }}
+            </td>
+            <td>
+              {{
+                averageInvestigationsTests[i]
+                  ? (averageInvestigationsTests[i]) 
+                  : (0 | number : "1.0-0")
+              }}
+            </td>
+            <td>
+              {{
+                averageDiagnosisTests[i]
+                  ? (averageDiagnosisTests[i]) 
+                  : (0 | number : "1.0-0")
+              }}
+            </td>
+            
+            <td>{{ testsCount[i] }}</td>
+          </tr>
+        </tbody>
+      </table>
+    <!--Buttons for pagination-->
+    <div class="pagination-controls">
+      <button class="pagination-button" (click)="prevPage()" [disabled]="currentPage === 1">Previous</button>
+      <span>Page {{ currentPage }}</span>
+      <!-- Assuming you have a variable 'totalPages' that stores the total number of pages -->
+      <button class="pagination-button" (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
     </div>
+      
+    </main>
   </div>
 </div>
