--- a/frontend/src/app/components/pages/graphs/admin/admin-registrations-over-time/admin-registrations-over-time.component.html
+++ b/frontend/src/app/components/pages/graphs/admin/admin-registrations-over-time/admin-registrations-over-time.component.html
@@ -1,49 +1,86 @@
 <div class="container-fluid d-flex flex-md-row flex-column">
   <!-- Sidebar -->
   <div class="d-flex justify-content-left text-center">
-      <admin-navbar></admin-navbar>
+    <admin-navbar></admin-navbar>
   </div>
 
   <!-- Main Content -->
   <div class="main-content-container flex-grow-1">
-      <main role="main" class="px-4">
-          <h1>User Registrations Over Time</h1>
-
-          <!-- Date Range Filter -->
-          <div class="btn-group mt-3" role="group">
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(1)">Last 1 Day</button>
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(3)">Last 3 Days</button>
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(7)">Last 7 Days</button>
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(30)">Last 1 Month</button>
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(180)">Last 6 Months</button>
-            <button type="button" class="btn btn-outline-secondary" (click)="dateRangeChanged(365)">Last 1 Year</button>
-          </div>
-
-          <div class="chart-container mt-3">
-              <canvas id="registrationChart">{{ chart }}</canvas>
-          </div>
-
-          <!-- Table -->
-          <div class="mt-3">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Date</th>
-                        <th scope="col">Number of Registrations</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th colspan="2">Selected Date Range: {{ dateRange }} day(s)</th>
-                    </tr>
-                    <tr *ngFor="let dateData of registrationData">
-                        <th scope="row">{{ dateData.date }}</th>
-                        <td>{{ dateData.registrations }}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <main role="main" class="px-4">
+         <!--Title-->
+         <div class="card-container title-container">
+          <h1 class="title">User Registrations Over Time</h1>
+            <!-- Description of the graph -->
+            <p class="graph-description">This graph illustrates the trend of user registrations for a specific time range.</p>
         </div>
+        
 
-      </main>
+
+
+      <div class="chart-container mt-3">
+        <canvas id="registrationChart">{{ chart }}</canvas>
+      </div>
+
+        <!-- Date Range Filter -->
+<div class="mt-3 d-flex justify-content-start flex-wrap">
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(1)">
+    Last 1 Day
+  </button>
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(3)">
+    Last 3 Days
+  </button>
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(7)">
+    Last 7 Days
+  </button>
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(30)">
+    Last 1 Month
+  </button>
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(180)">
+    Last 6 Months
+  </button>
+  <button type="button" class="date-range-button" (click)="dateRangeChanged(365)">
+    Last 1 Year
+  </button>
+</div>
+
+      <!-- Table -->
+      <div class="mt-3">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                  <th scope="col" class="sortable-header" (click)="onHeaderClick('date')">
+                    Date
+                    <i *ngIf="sortColumn === 'date' && sortDirection === 'asc'" class="sort-icon fa fa-arrow-up"></i>
+                    <i *ngIf="sortColumn === 'date' && sortDirection === 'desc'" class="sort-icon fa fa-arrow-down"></i>
+                  </th>
+                  <th scope="col" class="sortable-header" (click)="onHeaderClick('registrations')">
+                    Number of Registrations
+                    <i *ngIf="sortColumn === 'registrations' && sortDirection === 'asc'" class="sort-icon fa fa-arrow-up"></i>
+                    <i *ngIf="sortColumn === 'registrations' && sortDirection === 'desc'" class="sort-icon fa fa-arrow-down"></i>
+                  </th>
+                </tr>
+              </thead>
+              
+          <tbody>
+            <tr>
+              <th colspan="2">Selected Date Range: {{ dateRange }} day(s)</th>
+            </tr>
+            <tr *ngFor="let dateData of registrationData">
+              <th scope="row">{{ dateData.date }}</th>
+              <td>{{ dateData.registrations }}</td>
+            </tr>
+          </tbody>
+        
+        </table>
+          <!--Buttons for pagination-->
+          <div class="pagination-controls">
+            <button class="pagination-button" (click)="prevPage()" [disabled]="currentPage === 1">Previous</button>
+            <span>Page {{ currentPage }}</span>
+            <!-- Assuming you have a variable 'totalPages' that stores the total number of pages -->
+            <button class="pagination-button" (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
+          </div>
+          
+      </div>
+    </main>
   </div>
 </div>
