--- a/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
@@ -5,33 +5,18 @@
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
       <li class="nav-link pl-0 text-nowrap active">
-        <a routerLink="/admin-avg-score-vs-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>All Test Percentages Across All Case Studies</a
-        >
-      </li>
-      <li class="active" >
-        <a routerLink="/admin-avg-score-vs-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>Average Scores and User Count vs Time</a
-        >
-      </li>
-      <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/admin-registrations-over-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>NEW - User Registrations Over Time</a
+          > <i class="fa fa-bar-chart fa-fw"></i>User Registrations Over Time</a
         >
       </li>
       <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/admin-avg-score-over-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>NEW TEST - Global Average Score Across All Case Studies</a
+          > <i class="fa fa-bar-chart fa-fw"></i>Global Average User Scores Across All Case Studies</a
         >
       </li>
       <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/admin-case-study-correct-vs-incorrect"
           > <i class="fa fa-bar-chart fa-fw"></i>NEW TEST - Correct Vs Incorrect for specific Case Study</a
-        >
-      </li>
-      <li class="nav-link pl-0 text-nowrap active">
-        <a routerLink="/admin-avg-score-over-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>NEW TEST - AVG SCORE OVER TIME</a
         >
       </li>
     </ul>
