--- a/frontend/src/app/components/pages/graphs/user/user-case-study-correct-vs-oncorrect/user-case-study-correct-vs-oncorrect.component.html
+++ b/frontend/src/app/components/pages/graphs/user/user-case-study-correct-vs-oncorrect/user-case-study-correct-vs-oncorrect.component.html
@@ -7,7 +7,12 @@
   <!-- Main Content -->
   <div class="main-content-container flex-grow-1">
     <main role="main" class="px-4">
-      <h1>Average correct and incorrect answers across the different case studies</h1>
+      <div class="card-container title-container">
+        <h1 class="title">Average correct and incorrect answers across the different case studies</h1>
+          <!-- Description of the graph -->
+          <p class="graph-description">The graph showcases the average percentages of correct and incorrect answers for various case studies over selected time intervals.</p>
+        </div>
+      
 
       <div class="chart-container">
         <canvas id="MyChart">{{ chart }}</canvas>
@@ -76,16 +81,16 @@
                 </tr>
                 <tr *ngFor="let label of labels; index as i">
                     <th scope="row">{{ label }}</th>
-                    <td>{{ correctPercentages[i] | number:"1.2-2" }}%</td>
-                    <td>{{ incorrectPercentages[i] | number:"1.2-2" }}%</td>
+                    <td>{{ correctPercentages[i] | number:"1.0-0" }}%</td>
+                    <td>{{ incorrectPercentages[i] | number:"1.0-0" }}%</td>
                     <!-- Updated: Display total percentage -->
-                    <td>{{ (correctPercentages[i] + incorrectPercentages[i]) | number:"1.2-2" }}%</td>
+                    <td>{{ (correctPercentages[i] + incorrectPercentages[i]) | number:"1.0-0" }}%</td>
                 </tr>
                 <!-- Add the Average row -->
                 <tr>
                     <th scope="row">Average</th>
-                    <td>{{ calculateAverages().avgCorrect | number:"1.2-2" }}%</td>
-                    <td>{{ calculateAverages().avgIncorrect | number:"1.2-2" }}%</td>
+                    <td>{{ calculateAverages().avgCorrect | number:"1.0-0" }}%</td>
+                    <td>{{ calculateAverages().avgIncorrect | number:"1.0-0" }}%</td>
                     <td>{{ (calculateAverages().avgCorrect + calculateAverages().avgIncorrect) | number:"1.2-2" }}%</td>
                 </tr>
             </tbody>
