--- a/frontend/src/app/components/pages/graphs/user/user-scores-over-time-graph/user-scores-over-time-graph.component.html
+++ b/frontend/src/app/components/pages/graphs/user/user-scores-over-time-graph/user-scores-over-time-graph.component.html
@@ -2,20 +2,23 @@
 <div class="container-fluid d-flex flex-md-row flex-column">
 
   <!-- Navbar Section -->
-  <div class="sidebar-container d-flex justify-content-left text-center">
+  <div class="d-flex justify-content-left text-center">
     <app-navbar-userscore></app-navbar-userscore>
   </div>
-  
+
   <!-- Main Content -->
-  <div class="main-content-container flex-grow-1 px-4">
+  <div class="main-content-container flex-grow-1 right-container">
 
     <!-- Scores Section -->
-    <h1>Scores over time</h1>
+    <div class="title-container mt-2">
+      <h1 class="title">Scores over time</h1>
+      <p class="graph-description">This visualization depicts the progression of test scores over various intervals, allowing users to understand and analyze trends and patterns in performance across different case studies.</p>
+    </div>
 
     <!-- Dropdown for selecting number of tests -->
-    <div>
+    <div class="card-container">
       <h2>Select Test Ranges:</h2>
-      <table class="table table-striped">
+      <table class="table table-bordered">
         <thead>
           <tr>
             <th>Case Study</th>
@@ -33,11 +36,11 @@
                 <option *ngFor="let num of availableTestCounts[caseStudy._id]" [value]="num">{{ num }}</option>
               </select>
             </td>
-            <!--End selected test number-->       
+            <!--End selected test number-->
             <td *ngIf="selectedTestCounts[caseStudy._id]">
               <select (change)="onDropdownChange()" [(ngModel)]="selectedTestCounts[caseStudy._id].end">
                 <option *ngFor="let count of availableTestCounts[caseStudy._id]" [value]="count">{{ count }}</option>
-            </select>            
+              </select>            
             </td>
           </tr>
         </tbody>
@@ -46,7 +49,7 @@
     </div>
 
     <!-- Chart canvas -->
-    <div *ngIf="areFiltersApplied()">
+    <div *ngIf="areFiltersApplied()" class="card-container">
       <div class="chart-container mt-3">
         <canvas #myChart></canvas>
       </div>
@@ -54,7 +57,7 @@
       <div *ngFor="let caseStudy of caseStudies">
         <div *ngIf="filtersApplied[caseStudy._id]">
           <h3>{{ caseStudy.name }} (Case Study #{{ caseStudy.caseStudyNumber }})</h3>
-          <table class="table table-striped">
+          <table class="table table-bordered">
             <thead>
               <tr>
                 <th>Test Number</th>
@@ -71,7 +74,7 @@
                   <td>{{ test.createdAt | date }}</td>
                   <td>{{ test.totalScore }}</td>
                   <td>{{ totalQuestionsForCaseStudies[test.caseStudyId] }}</td>
-                  <td>{{ test.totalPercentage }}%</td>
+                  <td>{{ test.totalPercentage | number:'1.0-0' }}%</td>
                 </tr>
               </ng-container>
             </tbody>
