--- a/frontend/src/app/components/pages/graphs/admin/admin-case-study-correct-vs-incorrect/admin-case-study-correct-vs-incorrect.component.css
+++ b/frontend/src/app/components/pages/graphs/admin/admin-case-study-correct-vs-incorrect/admin-case-study-correct-vs-incorrect.component.css
@@ -1,5 +1,7 @@
 .container-fluid {
-  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar-container,
@@ -8,18 +10,98 @@
   overflow-y: auto;
 }
 
-@media (min-width: 768px) { /* 'md' breakpoint in Bootstrap */
-  .sidebar-container {
-      width: 25%;
-      min-width: 200px;
-      max-height: 100vh;
-  }
-
+@media (min-width: 768px) {
   .main-content-container {
-      width: 75%;
+      width: calc(100% - [width-of-sidebar]);
   }
 }
 
 .chart-container {
   height: 40vh; /* or any other percentage */
+}
+.card-container {
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table th,
+.table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+.table th {
+  background-color: #f4f4f4;
+  cursor: pointer;
+}
+
+.table tbody tr:nth-child(odd) {
+  background-color: #f9f9f9;
+}
+
+.table tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+button {
+  background-color: #9c88ff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 10px 5px;
+  align-items: center;
+}
+
+button:hover {
+  background-color: #7b6bd4;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.title-container h1, .title-container h2 {
+  margin-bottom: 20px;
+  color: #9c88ff;
+}
+
+.title {
+  text-decoration: underline;
+text-align: center;}
+
+ .button {
+  background-color: #9c88ff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 10px 5px;
+}
+
+.container-fluid, .main-content-container, .right-container, .card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Horizontally centering content */
+  text-align: center;  /* Text alignment */
+}
+/* New styles */
+body, h1, h2, p, th, td {
+  color: #9c88ff; /* Applying the purple color to all text elements */
 }
